--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,7 @@ path: home
     </div>
   </section>
 
-  <!-- Featured Inventory Section -->
-
+<!-- Featured Inventory Section -->
 <section class="container my-12 px-6">
   <h2 class="text-left">Featured Inventory</h2>
   <p class="text-left mt-2">Check out our latest vehicles.</p>
@@ -94,64 +93,67 @@ path: home
 
 
   <!-- Services Section -->
-  <section class="my-20 bg-[#1E6CB0] p-8 rounded-lg">
-    <h2 class="text-center text-white">
-      Our Services
-    </h2>
-    <p class="text-center mt-2 text-white">
-      From financing to vehicle maintenance, we’ve got you covered.
-    </p>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
-      <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
-        <h3 class="font-bold text-xl">service 1</h3>
-        <p class="text-gray-500 mt-2">description</p>
-        <a
-          href="/"
-          class="text-[#1E6CB0] hover:underline mt-2 inline-block"
-          >Learn More</a
-        >
-      </div>
-      <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
-        <h3 class="font-bold text-xl">service 2</h3>
-        <p class="text-gray-500 mt-2">description</p>
-        <a
-          href="/"
-          class="text-[#1E6CB0] hover:underline mt-2 inline-block"
-          >Learn More</a
-        >
-      </div>
-      <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
-        <h3 class="font-bold text-xl">service 3</h3>
-        <p class="text-gray-500 mt-2">description</p>
-        <a
-          href="/"
-          class="text-[#1E6CB0] hover:underline mt-2 inline-block"
-          >Learn More</a
-        >
+  <section class="my-16 bg-[#1E6CB0]">
+    <div class="container p-6 rounded-lg">
+      <h2 class="text-center text-white">
+        Our Services
+      </h2>
+      <p class="text-center mt-2 text-white">
+        From financing to vehicle maintenance, we’ve got you covered.
+      </p>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
+        <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
+          <h3>Service 1</h3>
+          <p class="mt-2">description</p>
+          <a
+            href="/"
+            class="text-[#1E6CB0] hover:underline mt-2 inline-block"
+            >Learn More</a
+          >
+        </div>
+        <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
+          <h3>Service 2</h3>
+          <p class="mt-2">description</p>
+          <a
+            href="/"
+            class="text-[#1E6CB0] hover:underline mt-2 inline-block"
+            >Learn More</a
+          >
+        </div>
+        <div class="p-6 bg-white border rounded-lg hover:shadow-lg">
+          <h3>Service 3</h3>
+          <p class="mt-2">description</p>
+          <a
+            href="/"
+            class="text-[#1E6CB0] hover:underline mt-2 inline-block"
+            >Learn More</a
+          >
+        </div>
       </div>
     </div>
   </section>
+  
 
-  <!-- Testimonials Section -->
-  <section class="my-20 mx-8">
+<!-- Testimonials Section -->
+<section class="my-12">
+  <div class="container mx-auto p-6">
     <h2 class="text-center">
       What Our Customers Say
     </h2>
     <p class="text-center mt-2">Hear from satisfied customers.</p>
-    <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"> 
+    <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="text-gray-700 italic">"content"</p>
-        <p class="mt-4 font-bold">- author</p>
+        <p class="italic">"Honest and reliable. Offered us the perfect car for a great price."</p>
+        <h4 class="mt-4">- Natalie</h4>
       </div>
       <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="text-gray-700 italic">"content"</p>
-        <p class="mt-4 font-bold">- author</p>
+        <p class="italic">"Fantastic service! Very easy to work with and very courteous. Very knowledgeable."</p>
+        <h4 class="mt-4">- Dakota</h4>
       </div>
       <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="text-gray-700 italic">"content"</p>
-        <p class="mt-4 font-bold">- author</p>
+        <p class="italic">"Caleb was friendly and helpful! Would recommend him to anyone looking for a nice and affordable used car."</p>
+        <h4 class="mt-4">- Briana</h4>
       </div>
-
     </div>
     <div class="col-span-full flex justify-center mt-6">
       <a
@@ -161,139 +163,152 @@ path: home
         View All Testimonials
       </a>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- About Section -->
-  <section class="my-10 bg-gray-100 p-8">
-    <div class="container grid grid-cols-1 md:grid-cols-2 gap-8">
-      <div class="flex flex-col justify-center">
-        <h2>About Us</h2>
-        <p class="mt-4 text-gray-700">
-          Located in Lomira, Wisconsin, Schaefer Auto is a used vehicle
-          dealership. It has become our mission to provide reliable vehicles for
-          a price point you cannot beat. We take pride in providing a wide
-          variety of vehicles with ranging makes, models, years, and mileage to
-          ensure you leave with a vehicle to fit both your needs and budget. If
-          you are not seeing the vehicle you had in mind, don’t worry. We will
-          work with you to provide exactly what you are looking for.
-        </p>
-      </div>
-      <div class="flex justify-center items-center">
-        <img
-          src="./static/img/about/schaefer-auto10.jpeg"
-          alt="Our Team"
-          class="w-full h-96 object-cover rounded-lg shadow-lg"
-        />
+
+
+<!-- About Section -->
+<section class="my-12 bg-gray-100">
+  <div class="container mx-auto px-6 py-8 grid grid-cols-1 md:grid-cols-2 gap-12">
+    <div class="flex flex-col justify-center">
+      <h2>About Us</h2>
+      <p class="mt-4 text-gray-700">
+        Located in Lomira, Wisconsin, Schaefer Auto is a used vehicle
+        dealership. It has become our mission to provide reliable vehicles for
+        a price point you cannot beat. We take pride in providing a wide
+        variety of vehicles with ranging makes, models, years, and mileage to
+        ensure you leave with a vehicle to fit both your needs and budget. If
+        you are not seeing the vehicle you had in mind, don’t worry. We will
+        work with you to provide exactly what you are looking for.
+      </p>
+      <div class="mt-4">
+        <a
+          href="/testimonials"
+          class="px-6 py-3 border-2 border-white bg-[#1E6CB0] text-white rounded-lg hover:bg-blue-600 inline-block"
+        >
+          Learn More
+        </a>
       </div>
     </div>
-  </section>
+    <div class="flex justify-center items-center">
+      <img
+        src="./static/img/about/schaefer-auto10.jpeg"
+        alt="Our Team"
+        class="w-full h-96 object-cover rounded-lg shadow-lg"
+      />
+    </div>
+  </div>
+</section>
 
-  <!-- Contact Section -->
-  <section class="my-10 bg-white p-8">
-    <div class="container grid grid-cols-1 md:grid-cols-2 gap-8">
-      <!-- Left Side: Contact Info -->
-      <div class="flex flex-col">
-        <h2 class="mb-4">Get in Touch</h2>
-        <p class="text-gray-600 mb-8">
-          Reach out to us directly or use the form to send us a message. We’d
-          love to hear from you!
-        </p>
-        <div class="space-y-6">
-          <div>
-            <h3 class="text-gray-900">Phone</h3>
-            <p class="text-gray-700">(555) 555-5555</p>
-          </div>
-          <div>
-            <h3 class="text-gray-900">Email</h3>
-            <p class="text-gray-700">contact@example.com</p>
-          </div>
-          <div>
-            <h3 class="text-gray-900">Location</h3>
-            <p class="text-gray-700">123 Main Street, Hometown, USA</p>
-          </div>
+
+
+<!-- Contact Section -->
+<section class="my-12 bg-white">
+  <div class="container mx-auto px-6 py-8 grid grid-cols-1 md:grid-cols-2 gap-12">
+    <!-- Left Side: Contact Info -->
+    <div class="flex flex-col">
+      <h2 class="mb-4">Contact Us Today</h2>
+      <p class="text-gray-600 mb-8">
+        Have questions or looking for your next vehicle? Reach out to us directly or fill out the form. Our team is here to help you find the perfect car!
+      </p>
+      <div class="space-y-6">
+        <div>
+          <h4>Phone</h4>
+          <p class="text-gray-700">(555) 555-5555</p>
         </div>
-      </div>
-
-      <!-- Right Side: Contact Form -->
-      <div class="flex justify-center items-center">
-        <div class="bg-gray-100 p-10 rounded-lg shadow-md w-full">
-          <form
-            method="POST"
-            action="/thank-you"
-            netlify
-            class="grid grid-cols-1 gap-4"
-          >
-            <!-- Name Field -->
-            <div>
-              <label for="name" class="block text-gray-700 font-semibold"
-                >Your Name</label
-              >
-              <input
-                type="text"
-                id="name"
-                name="name"
-                required
-                placeholder="John Doe"
-                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-              />
-            </div>
-
-            <!-- Email Field -->
-            <div>
-              <label for="email" class="block text-gray-700 font-semibold"
-                >Your Email</label
-              >
-              <input
-                type="email"
-                id="email"
-                name="email"
-                required
-                placeholder="you@example.com"
-                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-              />
-            </div>
-
-            <!-- Phone Field -->
-            <div>
-              <label for="phone" class="block text-gray-700 font-semibold"
-                >Your Phone</label
-              >
-              <input
-                type="tel"
-                id="phone"
-                name="phone"
-                placeholder="(555) 555-5555"
-                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
-              />
-            </div>
-
-            <!-- Message Field -->
-            <div>
-              <label for="message" class="block text-gray-700 font-semibold"
-                >Your Message</label
-              >
-              <textarea
-                id="message"
-                name="message"
-                required
-                rows="6"
-                placeholder="Type your message here..."
-                class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-[#1E6CB0]"
-              ></textarea>
-            </div>
-
-            <!-- Submit Button -->
-            <div class="text-center mt-4">
-              <button
-                type="submit"
-                class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
-              >
-                Send Message
-              </button>
-            </div>
-          </form>
+        <div>
+          <h4>Email</h4>
+          <p class="text-gray-700">contact@example.com</p>
+        </div>
+        <div>
+          <h4>Location</h4>
+          <p class="text-gray-700">123 Main Street, Hometown, USA</p>
         </div>
       </div>
     </div>
-  </section>
+
+    <!-- Right Side: Contact Form -->
+    <div class="flex justify-center items-center">
+      <div class="bg-gray-100 p-10 rounded-lg shadow-md w-full">
+        <form
+          method="POST"
+          action="/thank-you"
+          netlify
+          class="grid grid-cols-1 gap-4"
+        >
+          <!-- Name Field -->
+          <div>
+            <label for="name" class="block text-gray-700 font-semibold"
+              >Name</label
+            >
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required
+              placeholder="Name"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+            />
+          </div>
+
+          <!-- Email Field -->
+          <div>
+            <label for="email" class="block text-gray-700 font-semibold"
+              >Email</label
+            >
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              placeholder="Email"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+            />
+          </div>
+
+          <!-- Phone Field -->
+          <div>
+            <label for="phone" class="block text-gray-700 font-semibold"
+              >Phone</label
+            >
+            <input
+              type="tel"
+              id="phone"
+              name="phone"
+              placeholder="Phone"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+            />
+          </div>
+
+          <!-- Message Field -->
+          <div>
+            <label for="message" class="block text-gray-700 font-semibold"
+              >Message</label
+            >
+            <textarea
+              id="message"
+              name="message"
+              required
+              rows="6"
+              placeholder="Type your message here..."
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-[#1E6CB0]"
+            ></textarea>
+          </div>
+
+          <!-- Submit Button -->
+          <div class="text-center mt-4">
+            <button
+              type="submit"
+              class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
+            >
+              Send Message
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+
 </div>
