--- a/src/testimonials/index.html
+++ b/src/testimonials/index.html
@@ -11,18 +11,138 @@ layout: default
       <h1 class="text-4xl md:text-6xl font-bold text-white">{{title}}</h1>
     </div>
   </section>
-  <section class="my-12 mx-8">
-    <h2 class="text-2xl md:text-4xl font-bold text-center">
-      What Our Customers Say
-    </h2>
-    <p class="text-center mt-2">Hear from satisfied customers.</p>
-    <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-      {% for testimonial in settings.testimonials %}
-      <div class="p-6 border rounded-lg bg-gray-100">
-        <p class="text-gray-700 italic">"{{ testimonial.content }}"</p>
-        <p class="mt-4 font-bold">- {{ testimonial.author }}</p>
+
+  <!-- Thank You Section -->
+  <section class="my-4 bg-white">
+    <div class="container mx-auto p-6 grid grid-cols-1 lg:grid-cols-2 gap-8">
+      <!-- Left: Thank You Message -->
+      <div>
+        <h2>Thank you to all our satisfied customers!</h2>
+        <p class="mt-2">
+          If you would like to leave a review - Fill out the form with your name
+          and message, and we will post it on the website!
+        </p>
       </div>
-      {% endfor %}
+
+      <!-- Right: Form -->
+      <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+        <form
+          method="POST"
+          action="/thank-you"
+          netlify
+          class="grid grid-cols-1 gap-4"
+        >
+          <!-- Name Field -->
+          <div>
+            <label for="name" class="block text-gray-700 font-semibold"
+              >Name</label
+            >
+            <input
+              type="text"
+              id="name"
+              name="name"
+              required
+              placeholder="Your Name"
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+            />
+          </div>
+
+          <!-- Message Field -->
+          <div>
+            <label for="message" class="block text-gray-700 font-semibold"
+              >Message</label
+            >
+            <textarea
+              id="message"
+              name="message"
+              required
+              rows="3"
+              placeholder="Type your review here..."
+              class="mt-2 w-full p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+            ></textarea>
+          </div>
+
+          <!-- Submit Button -->
+          <div class="text-center">
+            <button
+              type="submit"
+              class="px-6 py-3 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
+            >
+              Submit Review
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonials Section -->
+  <section class="my-16">
+    <h2 class="text-center">What Our Customers Say</h2>
+    <p class="text-center mt-2">Hear from satisfied customers.</p>
+    <div
+      class="container p-6 mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
+    >
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="italic">
+          "Honest and reliable. Offered us the perfect car for a great price."
+        </p>
+        <h4 class="mt-4">- Natalie</h4>
+      </div>
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="italic">
+          "Fantastic service! Very easy to work with and very courteous. Very
+          knowledgeable."
+        </p>
+        <h4 class="mt-4">- Dakota</h4>
+      </div>
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="italic">
+          "Caleb was friendly and helpful! Would recommend him to anyone looking
+          for a nice and affordable used car."
+        </p>
+        <h4 class="mt-4">- Briana</h4>
+      </div>
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="italic">
+          "Honest and reliable. Offered us the perfect car for a great price."
+        </p>
+        <h4 class="mt-4">- Natalie</h4>
+      </div>
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="italic">
+          "Fantastic service! Very easy to work with and very courteous. Very
+          knowledgeable."
+        </p>
+        <h4 class="mt-4">- Dakota</h4>
+      </div>
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="italic">
+          "Caleb was friendly and helpful! Would recommend him to anyone looking
+          for a nice and affordable used car."
+        </p>
+        <h4 class="mt-4">- Briana</h4>
+      </div>
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="italic">
+          "Honest and reliable. Offered us the perfect car for a great price."
+        </p>
+        <h4 class="mt-4">- Natalie</h4>
+      </div>
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="italic">
+          "Fantastic service! Very easy to work with and very courteous. Very
+          knowledgeable."
+        </p>
+        <h4 class="mt-4">- Dakota</h4>
+      </div>
+      <div class="p-6 border rounded-lg bg-gray-100">
+        <p class="italic">
+          "Caleb was friendly and helpful! Would recommend him to anyone looking
+          for a nice and affordable used car."
+        </p>
+        <h4 class="mt-4">- Briana</h4>
+      </div>
     </div>
   </section>
 </div>
